--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
+  flutter_linkify: ^6.0.0
+  url_launcher: ^6.1.14
+
 
 
 
